--- a/build.yaml
+++ b/build.yaml
@@ -24,7 +24,7 @@ include:
   - board: seeeduino_xiao_ble
     # shield: corne_xiao_v2_left rgbled_adapter
     shield: corne_xiao_v2_left
-    # snippet: studio-rpc-usb-uart
+    snippet: studio-rpc-usb-uart
   - board: seeeduino_xiao_ble
     # shield: corne_xiao_v2_right rgbled_adapter
     shield: corne_xiao_v2_right
