--- a/build.yaml
+++ b/build.yaml
@@ -22,9 +22,7 @@ include:
 
   # Revision 2
   - board: seeeduino_xiao_ble
-    # shield: corne_xiao_v2_left rgbled_adapter
-    shield: corne_xiao_v2_left
+    shield: corne_xiao_v2_left rgbled_adapter
     snippet: studio-rpc-usb-uart
   - board: seeeduino_xiao_ble
-    # shield: corne_xiao_v2_right rgbled_adapter
-    shield: corne_xiao_v2_right
+    shield: corne_xiao_v2_right rgbled_adapter
